--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body id="gradient">
-	<h1>Cool Background Generator 2</h1>
+	<h1>Cool Background Generator</h1>
 	<input class="color1" type="color" name="color1" value="#00ff00">
 	<input class="color2" type="color" name="color2" value="#ff0000">
 	<h2>Current CSS Background</h2>
